<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="205dp"
                                                android:orientation="vertical"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintHorizontal_bias="0.5"
                                                app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            android:autofillHints="Type in a text"
            android:hint="@string/editTextPlaceholder"
            android:inputType="text" tools:ignore="LabelFor"/>

    <Button
            android:text="@string/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <Button
            android:text="@string/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"/>

</androidx.constraintlayout.widget.ConstraintLayout>